Fix text overflow in light/dark time studies

--- a/public/stylesheets/time-studies.css
+++ b/public/stylesheets/time-studies.css
@@ -123,7 +123,7 @@
 
 .o-time-study--small {
   width: 12rem;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   padding-right: 0.5rem;
   padding-left: 0.5rem;
 }
